update projects and add contact form

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="ml-auto">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" href="#content">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link active" href="#content">Home</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#about-us">About</a>
@@ -330,7 +330,7 @@
             <div class="carousel-item active  h-100">
               <div class="row h-100 justify-content-center align-items-center">
                 <div class="col-md-6 ">
-                  <img class="d-block w-100" src="img/richtech.JPG" alt="First slide">
+                  <img class="d-block w-100 img-fluid" src="img/richtech.JPG" alt="First slide">
                 </div>
                 <div class="col-md-6 project-desc">
                   <h2>Richtech Enterprise</h2>
@@ -344,7 +344,7 @@
             <div class="carousel-item h-100">
               <div class="row h-100 justify-content-center align-items-center">
                 <div class="col-md-6 ">
-                  <img class="d-block w-100" src="img/shop-review.JPG" alt="First slide">
+                  <img class="d-block w-100 img-fluid" src="img/shop-review.JPG" alt="First slide">
                 </div>
                 <div class="col-md-6 project-desc">
                   <h2 >Shop Review</h2>
@@ -358,14 +358,14 @@
             <div class="carousel-item h-100">
               <div class="row h-100 justify-content-center align-items-center">
                 <div class="col-md-6 d-flex justify-content-center">
-                  <img class="d-block p-2" src="img/Quiz/home.jpg" alt="First slide">
-                  <img class="d-block p-2" src="img/Quiz/login.jpg" alt="First slide">
+                  <img class="d-block p-2 img-fluid" src="img/Quiz/home.jpg" alt="First slide" id="app-img">
+                  <img class="d-block p-2 img-fluid" src="img/Quiz/login.jpg" alt="First slide" id="app-img">
                 </div>
                 <div class="col-md-6 project-desc">
                   <h2 >FYP Quiz App</h2>
                   <p class="para">This is an android app for my final year project and is built by using android studio. Because this is an android app, i could not showcase the application and only showcase it by documentation.</p>
-                  <a href="#" target="_blank">
-                    <button type="button" class="btn button primary-button text-uppercase">Documentation</button>
+                  <a href="quiz-app.html" target="_blank">
+                    <button type="button" class="btn button primary-button text-uppercase">Read More</button>
                   </a> 
                   <a href="https://github.com/jaspetham/Quiz-App" target="_blank">
                     <button type="button" class="btn button primary-button text-uppercase">Code</button>
@@ -500,7 +500,7 @@
                       </div>
                   </div>
                   <div class="col-md-12 text-center">
-                      <input type="submit" class="btn btn-success btn-send" value="Send message">
+                      <input type="submit" class="btn button primary-button" value="Send message">
                   </div>
               </div>      
           </div>
