--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <div class="card-body">
                   <i class="fab fa-bootstrap fa-3x py-3"></i>
                   <h5 class="card-title">Web Development</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                  <p class="card-text">Have experience in using bootstrap 4 and wordpress to create a real life website</p>
                   
                 </div>
               </div>
@@ -142,7 +142,7 @@
                 <div class="card-body">
                   <i class="fa fa-pen fa-3x py-3"></i>
                   <h5 class="card-title">Web Design</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                  <p class="card-text">Able to reference  or make a new design</p>
                 </div>
               </div>
             </div>
@@ -152,7 +152,7 @@
                 <div class="card-body">
                   <i class="fa fa-mobile-alt fa-3x py-3"></i>
                   <h5 class="card-title">Web Responsive</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                  <p class="card-text">Any website that i made will be compatible in different device like laptop, mobile.</p>
                 </div>
               </div>
             </div>
@@ -197,6 +197,7 @@
                 </div>
               </div>
 
+
               <div class="individual-skills">
                 <div class="row">
                   <div class="col-md-6">
@@ -208,6 +209,21 @@
                 </div>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" data-progress="50%"></div>
+                </div>
+              </div>
+
+
+              <div class="individual-skills" >
+                <div class="row">
+                  <div class="col-md-6">
+                    <span>Wordpress</span>
+                  </div>
+                  <div class="col-md-6 text-right">
+                    <span>40%</span>
+                  </div>
+                </div>
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" data-progress="40%"></div>
                 </div>
               </div>
 
@@ -424,7 +440,7 @@
               <div class="card-body">
                 <h5 class="card-title">Apprentice Web Developer @ Phi Soft (Sabah)</h5>
                 <h6 class="card-subtitle">Malaysia (Nov 2019 - April 2020)</h6>
-                <p class="card-text">Responsible for creating a real life website with using bootstrap 4 and Microweber platform.</p>
+                <p class="card-text">Responsible for creating a real life website with using bootstrap 4 and Microweber platform.   </p>
               </div>
             </div>
           </div>
