update about me

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                       </p>
                       <p class="para">
                         I been doing android studio app project during my course. Recently, has developed an interest in learning web development.
-                        Right now i am learning the basic of Bootstrap 4, HTML, CSS.
+                        Currently i am learning the basic of Bootstrap 4, HTML, CSS and is able to create simple static website.
                       </p>
                   </div>
                   <a href="./Jasper_Tham_Resume_final.pdf" download="Jasper_Tham_Resume_final.pdf" target="_blank">
