--- a/index.html
+++ b/index.html
@@ -186,6 +186,20 @@
               <div class="individual-skills">
                 <div class="row">
                   <div class="col-md-6">
+                    <span>Angular</span>
+                  </div>
+                  <div class="col-md-6 text-right">
+                    <span>70%</span>
+                  </div>
+                </div>
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" data-progress="70%"></div>
+                </div>
+              </div>
+
+              <div class="individual-skills">
+                <div class="row">
+                  <div class="col-md-6">
                     <span>HTML & CSS</span>
                   </div>
                   <div class="col-md-6 text-right">
@@ -373,6 +387,23 @@
             </div>
             <div class="carousel-item h-100">
               <div class="row h-100 justify-content-center align-items-center">
+                <div class="col-md-6 ">
+                  <img class="d-block w-100 img-fluid" src="img/barber-web.jpg" alt="First slide">
+                </div>
+                <div class="col-md-6 project-desc">
+                  <h2 >Barber Web</h2>
+                  <p class="para">This is a barbershop website insprised by one of the template in themeforest. I create this website from scratch with  Angular & Bootstrap.</p>
+                  <a href="https://barber-web.herokuapp.com/" target="_blank">
+                    <button type="button" class="btn button primary-button text-uppercase">Check it out</button>
+                  </a>
+                  <a href="https://github.com/jaspetham/Barber-Web" target="_blank">
+                    <button type="button" class="btn button primary-button text-uppercase">Code</button>
+                  </a>  
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="row h-100 justify-content-center align-items-center">
                 <div class="col-md-6 d-flex justify-content-center">
                   <img class="d-block p-2 img-fluid" src="img/Quiz/home.jpg" alt="First slide" id="app-img">
                   <img class="d-block p-2 img-fluid" src="img/Quiz/login.jpg" alt="First slide" id="app-img">
@@ -395,6 +426,7 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
           </ol>
         </div>
         
